k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtc-backend
  labels:
    app: rtc-portfolio
    component: backend
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: rtc-portfolio
      component: backend
  template:
    metadata:
      labels:
        app: rtc-portfolio
        component: backend
    spec:
      # InitContainer prevents application pods from crashing if the database is still initializing
      containers:
      - name: backend
        # Image tags are mapped to local registry names compiled during the Jenkins pipeline process
        image: rtc-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: api-port
        livenessProbe:
          tcpSocket:
            port: 8080  # Verifies the port socket is open & listening
          initialDelaySeconds: 95
          periodSeconds: 15
        readinessProbe:
          tcpSocket:
            port: 8080 # Verifies the port socket is open & listening
          initialDelaySeconds: 85
          periodSeconds: 15

        resources:
          limits:
            cpu: "1000m"
            memory: "1Gi"
          requests:
            cpu: "500m"
            memory: "512Mi"

      hostAliases:
        # - ip: "10.104.71.86"
        - ip: "10.101.60.142" # ingress-nginx-controller CLUSTER-IP retrieved by running `kubectl get svc -n ingress-nginx ingress-nginx-controller`
          hostnames:
            - "storage.nexus-rtc.local"
---
apiVersion: v1
kind: Service
metadata:
  name: rtc-backend-service
  labels:
    app: rtc-portfolio
    component: backend
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: rtc-portfolio
    component: backend
  # ClusterIP keeps services shielded inside the internal core network mesh
  type: ClusterIP
