k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rtc-app-ingress
  labels:
    app: rtc-project
  annotations:
    # Instructs the cluster to use the built-in NGINX reverse-proxy engine
    kubernetes.io/ingress.class: "nginx"
    
    # Prevents connection timeouts during high-volume document uploads
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    
    # CRITICAL REAL-TIME HEADERS: Unlocks stable WebSocket/STOMP streams
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/websocket-services: "rtc-backend-service"

    # Enforces strict session affinity tracking cookies to prevent multi-pod WebSocket drops!
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "balanced"
    nginx.ingress.kubernetes.io/session-cookie-name: "NEXUS_RTC_AFFINITY"
    nginx.ingress.kubernetes.io/session-cookie-expires: "14400"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "14400"
    nginx.ingress.kubernetes.io/session-cookie-path: "/"
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rtc-jenkins-service
                port:
                  number: 8888
    - host: nexus-rtc.local
      http:
        paths:
          # Path 1: Route out-of-channel alerts and real-time STOMP handshakes
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: rtc-backend-service
                port:
                  number: 8080
          # Path 2: Route standard Java JSON endpoint REST API controllers
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: rtc-backend-service
                port:
                  number: 8080
          # Path 3: Catch-all fallback default path serving React production static assets
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rtc-frontend-service
                port:
                  number: 80
    # Dedicated Admin/Storage UI Console Endpoint
    - host: storage-ui.nexus-rtc.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 9001
    - host: storage.nexus-rtc.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 9000
